--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "guava/filament-icon-select-column": "^1.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
