--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "guava/filament-icon-select-column": "^1.1",
+        "hasnayeen/themes": "^3.0",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
