--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "phpsa/filament-dadjokes": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
